demo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  namespace: react-js
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react
          image: ratana/reactjs:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
