demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
  namespace: react-js
spec:
  selector:
    app: react-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
